<resources>
    <string name="app_name">ScholarSeeks</string>
    <string name="get_started">Ready to Discover New Insights? Let\'s Get Started</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="rememeber_me">Rememeber me</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_login">Don\'t have an account? <u>Register</u></string>
    <string name="register">Register</string>
    <string name="subject_area">Subject Area</string>
    <string name="username">Username</string>
    <string name="already_have_an_account_login">Already have an account? <u>Login</u></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="search_journal">Search Journal</string>
    <string name="recommendation_for_you">Recommendation For You</string>
    <string name="you_may_also_like">You May Also Like</string>
    <string name="server_client_id">143242379016-3mjs40gk39r1hset8skqmvs9ahnonnrj.apps.googleusercontent.com</string>
    <string name="journal_abstract">Abstract</string>
    <string name="visit_site">Visit Site</string>
    <string name="rate_this_article">Rate this Article</string>
    <string name="rated_article">Rated Article</string>
    <string name="tell_others_what_you_think">Tell others what you think</string>
</resources>